// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component supports radio button 1`] = `
"<div
  class=\\"mdc-radio\\"
>
  <input
    class=\\"mdc-radio__native-control\\"
    type=\\"radio\\"
  />
  <div
    class=\\"mdc-radio__background\\"
  >
    <div
      class=\\"mdc-radio__outer-circle\\"
    />
    <div
      class=\\"mdc-radio__inner-circle\\"
    />
  </div>
  <div
    class=\\"mdc-radio__ripple\\"
  />
</div>"
`;

exports[`Radio component supports radio button 2`] = `
"<div
  class=\\"mdc-radio mdc-radio--disabled baz\\"
>
  <input
    class=\\"mdc-radio__native-control\\"
    disabled=\\"\\"
    type=\\"radio\\"
  />
  <div
    class=\\"mdc-radio__background\\"
  >
    <div
      class=\\"mdc-radio__outer-circle\\"
    />
    <div
      class=\\"mdc-radio__inner-circle\\"
    />
  </div>
  <div
    class=\\"mdc-radio__ripple\\"
  />
</div>"
`;

exports[`Radio component supports radio button 3`] = `
"<div
  class=\\"mdc-form-field\\"
>
  <div
    class=\\"mdc-radio\\"
  >
    <input
      checked=\\"\\"
      class=\\"mdc-radio__native-control\\"
      id=\\"foo\\"
      type=\\"radio\\"
    />
    <div
      class=\\"mdc-radio__background\\"
    >
      <div
        class=\\"mdc-radio__outer-circle\\"
      />
      <div
        class=\\"mdc-radio__inner-circle\\"
      />
    </div>
    <div
      class=\\"mdc-radio__ripple\\"
    />
  </div>
  <label
    for=\\"foo\\"
  >
    bar
  </label>
</div>"
`;

exports[`Radio component supports radio button 4`] = `
"<div
  class=\\"mdc-form-field baz\\"
>
  <div
    class=\\"mdc-radio\\"
  >
    <input
      class=\\"mdc-radio__native-control\\"
      name=\\"qux\\"
      type=\\"radio\\"
    />
    <div
      class=\\"mdc-radio__background\\"
    >
      <div
        class=\\"mdc-radio__outer-circle\\"
      />
      <div
        class=\\"mdc-radio__inner-circle\\"
      />
    </div>
    <div
      class=\\"mdc-radio__ripple\\"
    />
  </div>
  <label>
    bar
  </label>
</div>"
`;

exports[`Radio component supports radio button 5`] = `
"<div
  class=\\"mdc-form-field baz\\"
>
  <div
    class=\\"mdc-radio\\"
  >
    <input
      checked=\\"\\"
      class=\\"mdc-radio__native-control\\"
      id=\\"foo\\"
      name=\\"qux\\"
      type=\\"radio\\"
    />
    <div
      class=\\"mdc-radio__background\\"
    >
      <div
        class=\\"mdc-radio__outer-circle\\"
      />
      <div
        class=\\"mdc-radio__inner-circle\\"
      />
    </div>
    <div
      class=\\"mdc-radio__ripple\\"
    />
  </div>
  <label
    for=\\"foo\\"
  >
    bar
  </label>
</div>"
`;

exports[`Radio component supports touch target 1`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <div
    class=\\"mdc-radio mdc-radio--touch\\"
  >
    <input
      class=\\"mdc-radio__native-control\\"
      type=\\"radio\\"
    />
    <div
      class=\\"mdc-radio__background\\"
    >
      <div
        class=\\"mdc-radio__outer-circle\\"
      />
      <div
        class=\\"mdc-radio__inner-circle\\"
      />
    </div>
    <div
      class=\\"mdc-radio__ripple\\"
    />
  </div>
</div>"
`;

exports[`Radio component supports touch target 2`] = `
"<div
  class=\\"mdc-touch-target-wrapper baz\\"
>
  <div
    class=\\"mdc-radio mdc-radio--disabled mdc-radio--touch\\"
  >
    <input
      class=\\"mdc-radio__native-control\\"
      disabled=\\"\\"
      type=\\"radio\\"
    />
    <div
      class=\\"mdc-radio__background\\"
    >
      <div
        class=\\"mdc-radio__outer-circle\\"
      />
      <div
        class=\\"mdc-radio__inner-circle\\"
      />
    </div>
    <div
      class=\\"mdc-radio__ripple\\"
    />
  </div>
</div>"
`;

exports[`Radio component supports touch target 3`] = `
"<div
  class=\\"mdc-touch-target-wrapper\\"
>
  <div
    class=\\"mdc-form-field\\"
  >
    <div
      class=\\"mdc-radio mdc-radio--touch\\"
    >
      <input
        checked=\\"\\"
        class=\\"mdc-radio__native-control\\"
        id=\\"foo\\"
        type=\\"radio\\"
      />
      <div
        class=\\"mdc-radio__background\\"
      >
        <div
          class=\\"mdc-radio__outer-circle\\"
        />
        <div
          class=\\"mdc-radio__inner-circle\\"
        />
      </div>
      <div
        class=\\"mdc-radio__ripple\\"
      />
    </div>
    <label
      for=\\"foo\\"
    >
      bar
    </label>
  </div>
</div>"
`;

exports[`Radio component supports touch target 4`] = `
"<div
  class=\\"mdc-touch-target-wrapper baz\\"
>
  <div
    class=\\"mdc-form-field\\"
  >
    <div
      class=\\"mdc-radio mdc-radio--touch\\"
    >
      <input
        class=\\"mdc-radio__native-control\\"
        name=\\"qux\\"
        type=\\"radio\\"
      />
      <div
        class=\\"mdc-radio__background\\"
      >
        <div
          class=\\"mdc-radio__outer-circle\\"
        />
        <div
          class=\\"mdc-radio__inner-circle\\"
        />
      </div>
      <div
        class=\\"mdc-radio__ripple\\"
      />
    </div>
    <label>
      bar
    </label>
  </div>
</div>"
`;

exports[`Radio component supports touch target 5`] = `
"<div
  class=\\"mdc-touch-target-wrapper baz\\"
>
  <div
    class=\\"mdc-form-field\\"
  >
    <div
      class=\\"mdc-radio mdc-radio--touch\\"
    >
      <input
        checked=\\"\\"
        class=\\"mdc-radio__native-control\\"
        id=\\"foo\\"
        name=\\"qux\\"
        type=\\"radio\\"
      />
      <div
        class=\\"mdc-radio__background\\"
      >
        <div
          class=\\"mdc-radio__outer-circle\\"
        />
        <div
          class=\\"mdc-radio__inner-circle\\"
        />
      </div>
      <div
        class=\\"mdc-radio__ripple\\"
      />
    </div>
    <label
      for=\\"foo\\"
    >
      bar
    </label>
  </div>
</div>"
`;
